[package]
name = "abbreviator"
version = "0.1.8"
authors = ["Vagelis Prokopiou <vagelis.prokopiou@gmail.com>"]
edition = "2021"
description = "A library for abbreviating long words."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Vagelis-Prokopiou/abbreviator"
readme = "README.md"

[dependencies]
unicode-segmentation = "1.10.0"
